# SwitchBridge

./: README.md
Application/: ControllerConfigForm.cs  InputMapping.cs  MainForm.cs  PicoSerialLink.cs  Program.cs  README.md  SdlInputHandler.cs  SwitchBridge.csproj  VideoCaptureHandler.cs
Firmware/: CMakeLists.txt  README.md
Firmware/include/: btstack_config.h  switchbridge.h  tusb_config.h
Firmware/src/: bt_hid.c  main.c  serial_input.c  switch_protocol.c
